--- a/stylesheets/sass/index.sass
+++ b/stylesheets/sass/index.sass
@@ -1,4 +1,67 @@
 @use 'variable' as v
 
+
+.l-flex
+  display: flex
+
 html
   background: v.$background-color
+  line-height: 1.5
+  font-weight: 400px
+  font-size: 15px
+
+h1
+  font-size: 1.2rem
+  text-align: center
+
+.l-container
+  align-items: center
+  justify-content: center
+  height: 100vh
+
+
+.state-message
+  padding: 8px
+  text-align: center
+
+.turn-symbol
+  padding: 8px
+  font-size: 1.5rem
+  width: 100%
+  text-align: center
+
+.active
+  border-bottom: 4px solid black
+
+.turn
+  display: flex
+  padding: 8px 16px
+
+
+.table
+  background: black
+  border: 2px solid #fefefe
+  margin: auto
+
+.cell
+  background: white
+  height: 48px
+  width: 48px
+  cursor: pointer
+  text-align: center
+  font-size: 2rem
+
+
+
+.state-message
+  padding: 8px
+  text-align: center
+
+.button
+  display: inline-block
+  border: 2px solid black
+  border-radius: 4px
+  font-weight: bold
+  width: 100%
+  text-align: center
+  cursor: pointer
